feat(roles):
 - api групп доступа
