# openapi.gearit.yaml
@@ -14,6 +14,8 @@ tags:
     description: Операции с пользовательским аккаунтом.
   - name: Users
     description: Операции с пользователями.
+  - name: AccessPolicy
+    description: Управление привилегиями пользователя.
 paths:
   /auth/register:
     post:
@@ -361,6 +363,67 @@ paths:
               schema:
                 $ref: "#/components/schemas/ClientException"
 
+  /access-policy:
+    post:
+      tags:
+        - AccessPolicy
+      summary: Получение списка групп доступа.
+      operationId: accessPolicy/get
+      security:
+        - JWT: [ ]
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/PageableRequest'
+      responses:
+        200:
+          description: Успешное получение списка групп доступа.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PageableResponse'
+        400:
+          description: Если были переданы некорректные данные.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ClientException"
+        500:
+          description: Ошибка сервера.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ClientException"
+
+  /access-policy/resources:
+    get:
+      tags:
+        - AccessPolicy
+      summary: Получение списка доступных ресурсов.
+      operationId: accessPolicyResources/get
+      security:
+        - JWT: []
+      responses:
+        200:
+          description: Успешное получение списка доступных ресурсов.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GetAvailableResourcesResponse'
+        400:
+          description: Если были переданы некорректные данные.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ClientException"
+        500:
+          description: Ошибка сервера.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ClientException"
+
 components:
   securitySchemes:
     JWT:
@@ -579,3 +642,11 @@ components:
         - GREATER_THAN
         - LESS_THAN
         - CONTAINS
+
+    GetAvailableResourcesResponse:
+      type:
+        - object
+      properties:
+        availableResources:
+          type:
+            - array
